...
        ),
        SizedBox(height: 10),
        Row(
          children: [
            Expanded(
              child: ElevatedButton(
                key: Key('search_button'),
                style: ElevatedButton.styleFrom(
                  primary: Theme.of(context).colorScheme.secondary,
                ),
                onPressed: dispatchConcrete,
                child: Text(
                  'Search',
...
                ),
              ),
            ),
            SizedBox(width: 10),
            Expanded(
              child: ElevatedButton(
                key: Key('get_random_button'),
                style: ElevatedButton.styleFrom(
                  primary: Theme.of(context).buttonTheme.colorScheme.primary,
                ),
                onPressed: dispatchRandom,
                child: Text(
                  'Get random trivia',
...
